--- a/gmall-manage-service/src/main/resources/application.properties
+++ b/gmall-manage-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8083
 #spring.thymeleaf.mode=LEGACYHTML5
 ##\u5173\u95EDspringboot\u7684\u7F13\u5B58
 #spring.thymeleaf.cache=false
-spring.datasource.url=jdbc:mysql://localhost:3306/jtdb?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/gmall?characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 
