--- a/gmall-order-web/src/main/resources/application.properties
+++ b/gmall-order-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-#spring.datasource.url=jdbc:mysql://localhost:3306/jtdb?characterEncoding=utf-8
+#spring.datasource.url=jdbc:mysql://localhost:3306/gmall?characterEncoding=utf-8
 #spring.datasource.username=root
 #spring.datasource.password=root
 
